--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <p><em><strong>October 2018 - August 2019</strong></em></p>
 <p>1st place at both <em>Formula Student Germany</em> and <em>Formula Student East (Hungary)</em></p>
 </blockquote>
-<p>I was a member of AMZ Driverless, ETH's Formula Student Driverless team, for the 2018-2019 season. My primary role was as a member of the Perception team which was responsible for processing and analyzing all incoming information from the 2 cameras and 2 LiDARs on the car. My tasks involved the calibration of the various sensors in both the spatial and temporal domain to allow for fusion of the sensors data for combined processing.</p>
+<p>I was a member of AMZ Driverless, ETH's Formula Student Driverless team, for the 2018-2019 season. Being part of the Perception team, my primary role was to process and analyze all incoming information from the 2 cameras and 2 LiDARs on the car. My tasks involved the calibration of the various sensors in both the spatial and temporal domain to allow for fusion of the sensors data for combined processing.</p>
 <p>My secondary role was the programming of various AVR32 microcontrollers on the car for interfacing with various components such as the Inertial Navigation System (INS), Low Voltage controller (LV), accumulators (AKKU), dashboard (DB), and the CAN interface tying them all together.</p>
 <h2 id="enercage-research"><a href="https://industry.gatech.edu/technology/enercage-scalable-array-wireless-sensor-modules">EnerCage Research</a></h2>
 <blockquote>
@@ -111,7 +111,7 @@
 <p><em><strong>August 2015 - June 2016</strong></em></p>
 <p>Ranked 6th in the competition from 40 universities</p>
 </blockquote>
-<p>I was a member of the Georgia Tech HyTech Racing team where we design a single-seat Electric Vehicle to compete against teams from up to 40 other universities at the Formula Hybrid competition and FSAE Electric.</p>
+<p>I was a member of the Georgia Tech HyTech Racing team where we designed a single-seat Electric Vehicle to compete against teams from up to 40 other universities at the Formula Hybrid competition and FSAE Electric.</p>
 <p>I was responsible for linking the CANBUS network of the car and programming the various microcontrollers for functions ranging from pedal/brake control to controlling and monitoring the various EV units such as the Motor Controller, Accumulator, and Low Voltage Boards. I also installed a steering wheel-mounted smartphone that displayed gyroscope stabilized car diagnostics data such as speed, temperatures, charge, etc. via a Bluetooth connection to the car.</p>
 <h2 id="energy-jackets"><a href="https://sustain.gatech.edu/blog/turn-down-watt-greenovation-competition-winning-idea">Energy Jackets</a></h2>
 <blockquote>
@@ -188,7 +188,7 @@ fostering constructive competition and to raise awareness with regards to energy
 <li>Advanced Machine Learning</li>
 </ul>
 <h2 id="georgia-institute-of-technology"><a href="https://www.gatech.edu/about">Georgia Institute of Technology</a></h2>
-<h3 id="computer-engineering-bsc">(<a href="https://www.ece.gatech.edu/computer-engineering-degree">Computer Engineering BSc.</a>)</h3>
+<h3 id="computer-engineering-bsc-atlanta">(<a href="https://www.ece.gatech.edu/computer-engineering-degree">Computer Engineering BSc.</a>), Atlanta</h3>
 <blockquote>
 <p><strong>Minor</strong>: Computer Science<br />
 <strong>GPA</strong>: 3.76</p>
@@ -264,7 +264,7 @@ fostering constructive competition and to raise awareness with regards to energy
 <p><strong>IB Diploma Score</strong>: 42<br />
 <strong>GPA</strong>: 3.87</p>
 <p><em><strong>August 2010 - May 2014</strong></em></p>
-<p>Received Book Award for Mathematics (given to one student in the whole High School as chosen by a committee of HS Math Teachers)</p>
+<p>Received Book Award for Mathematics (given to one student in the whole High School as chosen by a committee from the HS Math Department)</p>
 </blockquote>
 <hr />
 <h1 id="work">Work</h1>
@@ -272,18 +272,21 @@ fostering constructive competition and to raise awareness with regards to energy
 <blockquote>
 <p><strong>Technologies</strong>: Android (Device OEM APIs), Stash, JIRA, Bamboo, Confluence, Agile</p>
 <p><em><strong>May 2017 - August 2017</strong></em></p>
+<p><em><strong>Atlanta</strong></em></p>
 </blockquote>
 <p>I interned at AirWatch on the Android Agent App Development team. My primary project involved refactoring and restructuring existing code with regards to device application policy control/management/restricition. I learned new team-based technologies such as Stash for codebases, JIRA for issue tracking, Bamboo for build management, and Confluence for documentation.</p>
 <h2 id="teaching-assistant-for-data-structures-and-algorithms-cs-1332-and-object-oriented-programming-cs-1331">Teaching Assistant for Data Structures and Algorithms (CS 1332) and Object-Oriented Programming (CS 1331)</h2>
 <blockquote>
 <p><strong>Technologies</strong>: Java (1.8, JavaFX, JUnit4)</p>
 <p><em><strong>January 2016 - May 2017</strong></em></p>
+<p><em><strong>Georgia Tech, Atlanta</strong></em></p>
 </blockquote>
 <p>I was a TA for the two CS courses. My responsibilities included writing homework assignments, preparing for and conduction weekly recitations, grading homeworks/tests, and holding office hours.</p>
 <h2 id="tutor-for-digital-design-ece-2020-and-programming-hardware-software-systems-ece-2035-2036">Tutor for Digital Design (ECE 2020) and Programming Hardware/Software Systems (ECE 2035, 2036)</h2>
 <blockquote>
 <p><strong>Technologies</strong>: C/C++ (MIPS ISA)</p>
 <p><em><strong>January 2016 - May 2017</strong></em></p>
+<p><em><strong>Georgia Tech, Atlanta</strong></em></p>
 </blockquote>
 <p>Tutored multiple ECE courses and aided students with lab assignments and grading. Course materials included:</p>
 <ul>
